# novel_writing

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  Thought_content.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dev_plan/: 00_overview.md  phase_00.md  phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  phase_09.md  phase_10.md  phase_11.md  phase_12.md  phase_13.md  phase_14.md  phase_15.md  phase_15_completion.md  phase_16_ops.md  phase_18.md  phase_19.md  phase_20.md  phase_21.md
docs/: DEPLOY.md  deployment.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
grafana/: alerts.yaml
grafana/dashboards/: nwr-overview.json
novel_runtime/: config.py  exceptions.py  logging.py  main.py  metrics.py
novel_runtime/agents/: __init__.py  base.py  chapter_planner.py  chapter_writer.py  context_compiler.py  continuity_auditor.py  cross_chapter_auditor.py  narrative_polisher.py  quality_auditor.py  reader_personas.py  reader_simulator.py  state_updater.py  story_architect.py  style_analyst.py
novel_runtime/api/: __init__.py  bible.py  (+12 more)
prompts/: adversarial_test.md  bible_character_concepts.md  bible_direction_variants.md  bible_full_generation.md  bible_update.md  chapter_plan.md  chapter_write.md  context_compile.md  continuity_review.md  cross_chapter_review.md  narrative_polish.md  quality_review.md  reader_simulation.md  state_update.md  style_analysis.md
tests/: conftest.py
(+124 files in other folders)
